# -MGiC-Biohazard

./: .gitignore  README.md
app/ASGEGame/: ASGEGame.cpp  ASGEGame.hpp  CMakeLists.txt  main.cpp
app/ASGEGame/data/images/battleMap/units/: unit_sprite_credit.txt
app/ASGEGame/data/images/tiled/: tile_set_credit.txt
app/ASGEGame/data/map/: NGTS.tsx  battle_map.tmx
app/ASGEServer/: ASGEServer.cpp  ASGEServer.hpp  CMakeLists.txt  main.cpp
include/ASGEGameLib/: GCNetClient.hpp  GCNetServer.hpp  GComponent.hpp  MyPacket.hpp
include/ASGEGameLib/gameObject/: Buttons.hpp  GameObject.h  Player.h
include/ASGEGameLib/gameObject/battleUnits/: BattleUnit.h
include/ASGEGameLib/utility/: BoundingBox.h  SpriteComponent.h  Tiles.h  Vector2.h
src/: CMakeLists.txt
src/ASGEGameLib/: GCNetClient.cpp  GCNetServer.cpp  GComponent.cpp  MyPacket.cpp
src/ASGEGameLib/gameObject/: Buttons.cpp  GameObject.cpp  Player.cpp
src/ASGEGameLib/gameObject/battleUnits/: BattleUnit.cpp
src/ASGEGameLib/utility/: BoundingBox.cpp  SpriteComponent.cpp  Tiles.cpp  Vector2.cpp
